{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 131,
  "lineage": "fa674375-ca11-89de-30e7-92588a00ede2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_to_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-2982944211",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-06198ac00d28c5408",
            "security_group_rule_id": "sgr-0c1b096027ceb185e",
            "self": false,
            "source_security_group_id": "sg-0d9702a84546d5755",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.backend_sg.aws_security_group.main",
            "module.frontend_sg.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_to_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1923999678",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-06198ac00d28c5408",
            "security_group_rule_id": "sgr-0ee958fec42229430",
            "self": false,
            "source_security_group_id": "sg-054ef03c3109a8e21",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.backend_sg.aws_security_group.main",
            "module.bastion_sg.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_to_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2435653969",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d9702a84546d5755",
            "security_group_rule_id": "sgr-0ae22849c817fa77e",
            "self": false,
            "source_security_group_id": "sg-054ef03c3109a8e21",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.bastion_sg.aws_security_group.main",
            "module.frontend_sg.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_to_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-730450003",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0fde0a93909c16c6d",
            "security_group_rule_id": "sgr-00320e261af5cc94f",
            "self": false,
            "source_security_group_id": "sg-054ef03c3109a8e21",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.bastion_sg.aws_security_group.main",
            "module.mysql_sg.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2066699446",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d9702a84546d5755",
            "security_group_rule_id": "sgr-0f4eb0213af8f3e7f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.frontend_sg.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mysql_to_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow MySQL traffic from Backend",
            "from_port": 3306,
            "id": "sgrule-1712953865",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0fde0a93909c16c6d",
            "security_group_rule_id": "sgr-01faf9812a179ab01",
            "self": false,
            "source_security_group_id": "sg-06198ac00d28c5408",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.backend_sg.aws_security_group.main",
            "module.mysql_sg.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.ansible_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177107204587:security-group/sg-091a067f667ae38f0",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091a067f667ae38f0",
            "ingress": [],
            "name": "expense-qa-ansible_sg",
            "name_prefix": "",
            "owner_id": "177107204587",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "expense-qa-ansible_sg",
              "component": "expense",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "expense-qa-ansible_sg",
              "component": "expense",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0227eab57e32c1c8f"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.backend_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177107204587:security-group/sg-06198ac00d28c5408",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06198ac00d28c5408",
            "ingress": [],
            "name": "expense-qa-backend",
            "name_prefix": "",
            "owner_id": "177107204587",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "expense-qa-backend",
              "component": "expense",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "expense-qa-backend",
              "component": "expense",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0227eab57e32c1c8f"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177107204587:security-group/sg-054ef03c3109a8e21",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054ef03c3109a8e21",
            "ingress": [],
            "name": "expense-qa-bastion_sg",
            "name_prefix": "",
            "owner_id": "177107204587",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "expense-qa-bastion_sg",
              "component": "expense",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "expense-qa-bastion_sg",
              "component": "expense",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0227eab57e32c1c8f"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177107204587:security-group/sg-0d9702a84546d5755",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9702a84546d5755",
            "ingress": [],
            "name": "expense-qa-frontend",
            "name_prefix": "",
            "owner_id": "177107204587",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "expense-qa-frontend",
              "component": "expense",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "expense-qa-frontend",
              "component": "expense",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0227eab57e32c1c8f"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177107204587:security-group/sg-0fde0a93909c16c6d",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fde0a93909c16c6d",
            "ingress": [],
            "name": "expense-qa-mysql",
            "name_prefix": "",
            "owner_id": "177107204587",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "expense-qa-mysql",
              "component": "expense",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "expense-qa-mysql",
              "component": "expense",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0227eab57e32c1c8f"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    }
  ]
}